# SiK-Python-Game

./: .env.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  ANIMATION_REPORT.md  CHANGELOG.md  CORRECION_PYLINT_LOADING_SCENE.md  MIGRATION_TEST.md  README.md  animation_config.json  commit_message.txt  debug_game_engine.py  diagnostico.py  diagnostico_config.py  diagnostico_game.py  fix_database.py  init_database.py  initialize_schema.py  juego_simple_pygame_gui.py  migrate_characters.py  package_config.json  pyproject.toml  requirements.txt  run_migration_step1.py  run_migration_step2.py  test_atmospheric_effects.py  test_config_db_simple.py  test_game_engine_simple.py  test_game_status.py  test_menu_flow.py  test_simple_game.py
.github/: OJO.instructions.md  OPTIMIZACION_INSTRUCCIONES.md  SEGUNDA_OPTIMIZACION.md  copilot-instructions-backup.md  copilot-instructions-nueva.md  copilot-instructions-optimized.md  copilot-instructions-version-anterior.md  copilot-instructions.md
assets/: README.md
backups__DISABLED/backup_before_cleanup/: README.md  pyproject.toml
backups__DISABLED/backup_before_cleanup/docs/: COLABORACION.md
backups__DISABLED/backup_before_cleanup/src/: __init__.py
backups__DISABLED/backup_before_cleanup/src/core/: __init__.py  game_engine.py  save_manager.py  scene_manager.py
backups__DISABLED/backup_before_cleanup/src/entities/: __init__.py  entity.py  player.py  powerup.py  tile.py
backups__DISABLED/backup_before_cleanup/src/scenes/: __init__.py  game_scene.py  main_menu_scene.py  pause_scene.py
backups__DISABLED/backup_before_cleanup/src/ui/: hud.py  menu_manager.py
backups__DISABLED/backup_before_cleanup/src/utils/: animation_manager.py  asset_manager.py  desert_background.py  logger.py  save_manager.py
backups__DISABLED/backup_before_cleanup/tests/: README.md  __init__.py  test_config_manager.py  test_enemy_system.py  test_projectile_system.py
config/: README.md  animations.json  audio.json  characters.json  display.json  enemies.json  game.json  gameplay.json  input.json  loading_screen.json  packaging.json  powerups.json  save_system.json  ui.json  workflow.json
data/: game.db
dev-tools/: README.md  README_OLD.md  juego_simple_pygame_gui.py
docs/: ANALISIS_ARCHIVOS_SUFIJOS.md  ANALISIS_POST_MODERNIZACION.md  ANALISIS_TERMINAL.md  ARCHIVO  CLEANUP_REPORT.md  COLABORACION.md  CONFIGURACION_EXCLUSION_PROBLEMAS.md  CONFIGURACION_POWERSHELL_OPTIMIZADA.md  CORRECION_PYLINT_COMPLETA.md  ESTADO_CIERRE_PROYECTO.md  ESTADO_FINAL_PROYECTO.md  ESTADO_REAL_PROYECTO.md  FLUJO_MENUS_GUARDADO.md  FUNCIONES_DOCUMENTADAS.md  INDICE_MIGRACION_SQLITE.md  INFORME_ANALISIS_PROYECTO.md  INSTRUCCIONES_DESARROLLO.md  LIMPIEZA_DEVTOOLS_COMPLETADA.md  LIMPIEZA_GITHUB_COMPLETADA.md  LOGICA_GESTION_DOCUMENTAL.md  MATRIZ_DECISIÓN_GH_VS_GIT.md  MEJORAS_TERMINAL.md  METODO_COMMIT_UNIFICADO.md  OPTIMIZACION_ENTORNO_TRABAJO.md  PLAN_LIMPIEZA_Y_DESARROLLO.md  PLAN_MIGRACION_SQLITE.md  PLAN_REFACTORIZACION_V2.md  PROYECTO_MIGRACION_SQLITE.md  README.md  REFACTORIZACION_ESTADO_ACTUAL.md  REFINAMIENTO_INSTRUCCIONES_COMPLETADO.md  REGLAS_PROYECTO_ACTUALIZADAS.md  REORGANIZACION_ESTRUCTURAL_COMPLETADA.md  REORGANIZACION_ESTRUCTURAL_DIRECTORIOS.md  RESUMEN_CONFIGURACION_VSCODE.md  RESUMEN_FINAL_PROYECTO.md  RESUMEN_REORGANIZACION.md  SIK_WORKFLOW_GUIA_COMPLETA.md  (+13 more)
(+522 files in other folders)
